--- a/room1.html
+++ b/room1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>談話室</title>
-    <link rel="stylesheet" href="../_shared/style.css">
+    <link rel="stylesheet" href="_shared/style.css">
   </head>
   <body>
     <div class="container">
@@ -38,7 +38,7 @@
       let roomname = '談話室';
     </script>
     <script src="//cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
-    <script src="../_shared/key.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="_shared/key.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
